<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>CodeStory2013</groupId>
    <artifactId>CodeStory2013</artifactId>
    <packaging>war</packaging>
    <version>1.0-SNAPSHOT</version>
    <!--   <repositories>
           <repository>
               <id>sonatype</id>
               <name>Sonatype</name>
               <url>http://repository.sonatype.org/content/groups/public/</url>
           </repository>
       </repositories>-->
    <name>CodeStory2013 Maven Webapp</name>
    <url>http://maven.apache.org</url>
    <dependencies>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>2.5</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>14.0-rc2</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>1.9.5</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.1.2</version>
        </dependency>
        <dependency>
            <groupId>com.github.peichhorn</groupId>
            <artifactId>lombok-pg</artifactId>
            <version>0.11.3</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.codehaus.groovy</groupId>
            <artifactId>groovy</artifactId>
            <version>2.0.6</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.2</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.0.9</version>
            <scope>runtime</scope>
        </dependency>
    </dependencies>
    <build>
        <finalName>CodeStory2013</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.0</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <!--<plugin>-->
            <!--<groupId>org.apache.maven.plugins</groupId>-->
            <!--<artifactId>maven-surefire-plugin</artifactId>-->
            <!--<configuration>-->
            <!--<forkMode>pertest</forkMode>-->
            <!--<argLine>-Xms4096m -Xmx4096m -verbose:gc -server -XX:+UseG1GC -XX:+AggressiveOpts</argLine>-->
            <!--<testFailureIgnore>false</testFailureIgnore>-->
            <!--<skip>false</skip>-->
            <!--</configuration>-->
            <!--</plugin>-->
        </plugins>
    </build>
</project>
